# Lake_Technology_Stack

./: .gitignore  .vercelignore  ANALISE_FLUXO.md  CHANGELOG.md  COLOSSEUM_FIT.html  HACKATHON.md  README.md  SECURITY.md  docker-compose.yml  next.config.ts  old_marketplace_restore.txt  package-lock.json  package.json  skills-lock.json  tailwind.config.ts  temp_diff.txt  temp_head.txt  tsconfig.json
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  security.yml
LAKEZERO/intent_interceptor/: Cargo.toml  index.html
LAKEZERO/intent_interceptor/src/: lib.rs
LAKEZERO/lakezero-api/: licenses.db  main.py
Tokeniza.Web3/: package-lock.json
Tokeniza.Web3/app/: layout.tsx  page.tsx
Tokeniza.Web3/lib/: db.ts
app/: globals.css  layout.tsx  page.tsx
archive-evm/: .dockerignore  .eslintrc.json  .gitignore  .lintstagedrc.js  Dockerfile  RESUMO_HACKATHON.md  docker-compose.dev.yml  jest.config.js  next.config.js  package-lock.json  tsconfig.json
components/: AdminBadge.tsx  ChangeWalletModal.tsx  CreditsModal.tsx  Footer.tsx  GlobalTicker.tsx  SolanaProvider.tsx  locale-toggle.tsx  navbar.tsx  pricing-modal.tsx  wallet-control.tsx
context/: credits-context.tsx  medals-context.tsx  wallet-context.tsx
hooks/: useExchangeRates.ts
lib/: api.ts  blockchain-utils-new.ts  blockchain-utils.ts  database-status.ts  medals.ts  prisma.ts  solana-address.ts  solana-bot.ts  solana-oracle.ts  token-prices.ts  waitlist-store.ts  wallet-checker.ts
prisma/: schema.prisma
scripts/: generate-bot-wallet.ts
services/: lakezero.ts
types/: lakezero.ts
(+64 files in other folders)
